testing local images
testing local images

--- a/Choose Your Own Deploy PHX.html
+++ b/Choose Your Own Deploy PHX.html
@@ -20,7 +20,7 @@ body, tw-story {
   	font-family: Nunito, san-serif;
   	font-size: 150%;
 	background-color: #152035; 
-	background-image: url("http://i68.tinypic.com/209mv54.jpg");
+	background-image: url('http://i68.tinypic.com/209mv54.jpg');
 	background-size: cover;
 	color: #FFFFFF;
 }
@@ -38,7 +38,7 @@ body, tw-story {
 }
 
 tw-story[tags~="Toggle"] {
-	background-image: url("http://i65.tinypic.com/2sjdx.jpg");
+	background-image: /img/Toggle_background.jpg;
 	color: #00D6A6
 }
 
