Testing relative image links

--- a/Choose Your Own Deploy PHX.html
+++ b/Choose Your Own Deploy PHX.html
@@ -38,7 +38,7 @@ body, tw-story {
 }
 
 tw-story[tags~="Toggle"] {
-	background-image: /img/Toggle_background.jpg;
+	background-image: "img/Toggle_background.jpg";
 	color: #00D6A6
 }
 
@@ -417,7 +417,7 @@ Try again?
 [[Top planet|Goes fine]]
 [[Strange planet|Merge conflict]]</tw-passagedata><tw-passagedata pid="39" name="Deploy darkly" tags="Case-study" position="1785,790">Each team works on their spacelane plan in the same place. Since they&#x27;re doing acceptance and integration tests automatically several times a day, they never go too far down a path that conflicts with another team.
 
-&lt;img src=&quot;/img/Toggle_launching.jpg&quot;&gt;
+&lt;img src=&quot;img/Toggle_launching.jpg&quot; width=500&gt;
 
 After several weeks of work, a team finishes their sprint by sending Toggle or someone like them to test that the spacelane works, before they send everyone down it. Only Toggle&#x27;s ship can see the markers - they&#x27;re invisible to regular traffic. When the team is satisfied that the route is safe and stable, they turn on the markers so everyone can use the route.
 
