--- a/Choose Your Own Deploy DoDNYC.html
+++ b/Choose Your Own Deploy DoDNYC.html
@@ -1,4 +1,4 @@
-<tw-storydata name="Choose Your Own Deploy DoDNYC" startnode="" creator="Twine" creator-version="2.2.1" ifid="BE6CFD97-C7B9-427B-AB71-90925591314F" zoom="1" format="Harlowe" format-version="2.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@import url('https://fonts.googleapis.com/css?family=Nunito');
+<tw-storydata name="Choose Your Own Deploy DoDNYC" startnode="1" creator="Twine" creator-version="2.2.1" ifid="BE6CFD97-C7B9-427B-AB71-90925591314F" zoom="1" format="Harlowe" format-version="2.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@import url('https://fonts.googleapis.com/css?family=Nunito');
 @import url('https://fonts.googleapis.com/css?family=Franklin+Libre');
 @import url('http://i68.tinypic.com/209mv54.jpg');
   
@@ -136,7 +136,9 @@ Deployment is not the same thing as activation.
 [[Albatross launch]]
 [[Market segments]]
 [[Kill switch]]
-[[Internal testing]]</tw-passagedata><tw-passagedata pid="10" name="User colors" tags="User" position="2548,890" size="100,100">(enchant: ?Page, (background: &quot;none&quot;))
+[[Internal testing]]
+
+[[Adventure choices]] </tw-passagedata><tw-passagedata pid="10" name="User colors" tags="User" position="2548,890" size="100,100">(enchant: ?Page, (background: &quot;none&quot;))
 ##Colors
 (background: #ff00ff)[Users have a lot of feelings about their interfaces.]
 (text-colour: white)[Some of us need high-contrast text to read.]
