--- a/The Toggle Game.html
+++ b/The Toggle Game.html
@@ -90,7 +90,7 @@ tw-story[tags~="Toggle"] {
 [[Adventure choices]]
 [[Case study]]</tw-passagedata><tw-passagedata pid="2" name="Launch Time" tags="Toggle" position="600,50" size="100,100">#Hiya
 This is Toggle.
-&lt;img src=&quot;https://img/20171001_191226.jpg&quot; width=500 alt=&quot;Space explorer in space suit, blue and gray&quot;&gt;
+&lt;img src=&quot;https://github.com/wiredferret/Toggle/blob/master/img/20171001_191226.jpg?raw=true&quot; width=500 alt=&quot;Space explorer in space suit, blue and gray&quot;&gt;
 
 Toggle is a non-binary space explorer who works for SpaceLanes, Inc. Their job is to place markers on planets to help efficiently route spaceliners. Once a marker is placed, the home office can control it remotely.
 
@@ -99,7 +99,8 @@ Pack everything Toggle needs for a trip!
 [[Spacelane flags]]
 [[Swag]]
 
-[[All packed!|Adventure choices]]</tw-passagedata><tw-passagedata pid="3" name="Adventure choices" tags="" position="600,200" size="200,200">#Adventure 
+[[All packed!|Adventure choices]]
+</tw-passagedata><tw-passagedata pid="3" name="Adventure choices" tags="" position="600,200" size="200,200">#Adventure 
 #choices
 
 Hey, folks! Let&#39;s choose our adventure. Each of these choices will lead you down a different deployment-style path.
