Troubleshooting this would be a lot easier if it wasn't a hosted images problem

--- a/The Toggle Game.html
+++ b/The Toggle Game.html
@@ -90,7 +90,7 @@ tw-story[tags~="Toggle"] {
 [[Adventure choices]]
 [[Case study]]</tw-passagedata><tw-passagedata pid="2" name="Launch Time" tags="Toggle" position="600,50" size="100,100">#Hiya
 This is Toggle.
-[img[img/041111_magic_eye_1g_a.png]]
+[img/041111_magic_eye_1g_a.png]
 &lt;img src=&quot;https://github.com/wiredferret/Toggle/blob/master/img/20171001_191226.jpg?raw=true&quot; width=500 alt=&quot;Space explorer in space suit, blue and gray&quot;&gt;
 
 Toggle is a non-binary space explorer who works for SpaceLanes, Inc. Their job is to place markers on planets to help efficiently route spaceliners. Once a marker is placed, the home office can control it remotely.
