Testing to see if new toggle image appears

--- a/The Toggle Game.html
+++ b/The Toggle Game.html
@@ -63,7 +63,9 @@ tw-story[tags~="Toggle"] {
 
 
 
+
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">
+
 
 
 
@@ -94,7 +96,7 @@ tw-story[tags~="Toggle"] {
 [[Adventure choices]]
 [[Case study]]</tw-passagedata><tw-passagedata pid="2" name="Launch Time" tags="Toggle" position="600,50" size="100,100">#Hiya
 This is Toggle.
-&lt;img src=&quot;https://github.com/wiredferret/Toggle/blob/master/img/ThumbsUpDark@2x.png?raw=true&quot; width=500 alt=&quot;Space explorer in space suit, blue and gray&quot;&gt;
+&lt;img src=&quot;https://github.com/wiredferret/Toggle/blob/master/img/ToggleMoon.png?raw=true&quot; width=500 alt=&quot;Space explorer in space suit, blue and gray&quot;&gt;
 
 Toggle is a non-binary space explorer who works for SpaceLanes, Inc. Their job is to place markers on planets to help efficiently route spaceliners. Once a marker is placed, the home office can control it remotely.
 
