Fixing the file capitalization
Can't test my theory about the ?raw=true
because evidently I got the capitalization wrong on this one -- jpg vs JPG.

Let's see if it's happier now.

--- a/The Toggle Game.html
+++ b/The Toggle Game.html
@@ -395,7 +395,7 @@ In systems with large bundled deployments, a failure in any feature may mean tha
 
 You&#39;re going to need some rocket fuel to get going. Have you loaded it carefully? You don&#39;t want the elements to cross over or mix too early.
 
-&lt;img src=&quot;https://github.com/wiredferret/Toggle/blob/master/img/dietcoke_and_mentos.jpg?raw=true&quot; width=500 alt=&quot;Diet Coke and Mentos prepped to make a dramatic fizzy fountain&quot;&gt;
+&lt;img src=&quot;https://github.com/wiredferret/Toggle/blob/master/img/dietcoke_and_mentos.JPG?raw=true&quot; width=500 alt=&quot;Diet Coke and Mentos prepped to make a dramatic fizzy fountain&quot;&gt;
 
 Rocket fuel is two unstable elements that get combined right before takeoff. This is sort of like deploying your code darkly and then turning it on when you&#39;re really ready to launch.
 
