Fixing image URLs
In which I learn that I cannot type URLs reliable. Too many hyphens, no = sign, caps, underscore. It's pretty impressive.

However, this commit exists to see if just the jpg images need the ?raw=true annotation.

--- a/The Toggle Game.html
+++ b/The Toggle Game.html
@@ -137,13 +137,13 @@ You might want to turn on features in these ways:
 
 [[Back to Adventure Choices|Adventure choices]]
 
-&lt;img src=&quot;https://github.com/wiredferret/Toggle/blob/master/img/20171001_190835-1.jpg&quot; width=500 alt=&quot;LaunchDarkly rocket sticker on a celestial fabric background&quot;&gt;</tw-passagedata><tw-passagedata pid="5" name="Design" tags="Design" position="666,478" size="100,100">##Design
+&lt;img src=&quot;https://github.com/wiredferret/Toggle/blob/master/img/sticker_black-bg.jpg&quot; width=500 alt=&quot;LaunchDarkly rocket sticker on a celestial fabric background&quot;&gt;</tw-passagedata><tw-passagedata pid="5" name="Design" tags="Design" position="666,478" size="100,100">##Design
 
 Using feature flags for design is a way to give designers and product owners control over the user experience without having to go back to development with requests for every change. 
 
 Design choices with feature flags could be either from the product side - things like A/B testing or experimentation, or it could be driven from the user-side - things like setting your accessibility preferences or colors.
 
-&lt;img src=&quot;https://github.com/wiredferret/Toggle/blob/master/img/Toggle_launching.jpg&quot; width=500 alt=&quot;An illustration of Toggle launching something darkly, tinkering with a rocket in a dark room&quot;&gt;
+&lt;img src=&quot;https://github.com/wiredferret/Toggle/blob/master/img/Toggle_launching.jpg?raw=true&quot; width=500 alt=&quot;An illustration of Toggle launching something darkly, tinkering with a rocket in a dark room&quot;&gt;
 
 [[A/B testing]]
 [[White-labeling]]
@@ -307,14 +307,14 @@ Test in production, but not where anyone can see.
 The goal is to have the ability to test your new feature against all the things that are unique about production, such as weird user accounts, message volume, scale, speed, latency, and other factors. The other goal is to never have a user complain because our testing broke their experience.
 
 Visibility is being able to control exactly who sees the feature. That might be just yourself, or your team, or anyone in your company. It might include a small number of customers or test users. It&#39;s up to you, and being able to make these choices gives you more power.
-&lt;img src=&quot;https://github.com/wiredferret/Toggle/blob/master/img/041111_magic_eye_1g_a.png&quot; width=500 alt=&quot;Magic Eye puzzle, apparently random dots&quot;&gt;
+&lt;img src=&quot;https://github.com/wiredferret/Toggle/blob/master/img/magic_eye.png&quot; width=500 alt=&quot;Magic Eye puzzle, apparently random dots&quot;&gt;
 
 [[Merging]]
 [[Deleting!]] 
 
 [[Back to Development|Development]]
 [[Back to Adventure choices|Adventure choices]]</tw-passagedata><tw-passagedata pid="18" name="Merging" tags="Development" position="313,881" size="100,100">##Merging
-&lt;img src=&quot;https://github.com/wiredferret/Toggle/blob/master/img//cooked-fresh-spaghetti-1389122074pCK.jpg&quot; width=&quot;500&quot; alt=&quot;Tangle of cooked spaghetti noodles&quot;&gt;
+&lt;img src=&quot;https://github.com/wiredferret/Toggle/blob/master/img/cooked-fresh-spaghetti-1389122074pCK.jpg&quot; width=&quot;500&quot; alt=&quot;Tangle of cooked spaghetti noodles&quot;&gt;
 
 One of the most stressful parts of developing in a team is making sure that your code fits in with other people&#39;s work without anyone causing problems for each other. This is especially difficult when everyone is working in individual development branches that aren&#39;t visible.
 
@@ -403,7 +403,7 @@ Rocket fuel is two unstable elements that get combined right before takeoff. Thi
 </tw-passagedata><tw-passagedata pid="25" name="Spacelane flags" tags="Toggle" position="922,51" size="100,100">##Spacelane flags
 
 Toggle&#39;s spacelane markers look like this:
-&lt;img src=&quot;https://github.com/wiredferret/Toggle/blob/master/img/heliograph1.jpg&quot; width=500 alt=&quot;Heliograph, a mirror used to send messages long distances with flashes of sunlight&quot;&gt;
+&lt;img src=&quot;https://github.com/wiredferret/Toggle/blob/master/img/heliograph_1.jpg&quot; width=500 alt=&quot;Heliograph, a mirror used to send messages long distances with flashes of sunlight&quot;&gt;
 
 The way that we label our flags changes how we think of them, how long they should last, and who can see them. 
 
@@ -607,7 +607,7 @@ Just like Toggle, I have a team that makes navigating deployment and release muc
 
 They&#39;ll be happy to send you a free t-shirt and some stickers of Toggle.
 
-&lt;img src=&quot;https://github.com/wiredferret/Toggle/blob/master/img/LaunchDarklyBayBridge.jpeg&quot; width=700 alt=&quot;The Bay Bridge is prettier than the Golden Gate&gt;
+&lt;img src=&quot;https://github.com/wiredferret/Toggle/blob/master/img/LaunchDarklyBayBridge.jpeg&quot; width=700 alt=&quot;The Bay Bridge is prettier than the Golden Gate&quot;&gt;
 
 [[Adventure choices]]
 [[Case study]]</tw-passagedata><tw-passagedata pid="47" name="footer" tags="footer" position="2916,1166" size="100,100">
@@ -714,7 +714,7 @@ It has been said that the best code diff is a red diff -- deleting code, feature
 
 But sometimes it&#39;s nervewracking to delete something that *may* still be needed. One way to handle this uncertainty is to flag the section that you are thinking of removing. This works like commenting it out, but you can also use it in a more nuanced way, for example turning a feature down gradually, or eliminating it from only certain segments of users.
 
-&lt;img src&quot;https://github.com/wiredferret/Toggle/blob/master/img/red_diff.png&quot; width=&quot;500&quot; alt=&quot;Source control showing red and green diffs&quot;&gt;
+&lt;img src=&quot;https://github.com/wiredferret/Toggle/blob/master/img/red_diff.png&quot; width=&quot;500&quot; alt=&quot;Source control showing red and green diffs&quot;&gt;
 
 [[Visibility]]
 [[Merging]] 
