Trying to detect a difference between jpg and png requirements

--- a/The Toggle Game.html
+++ b/The Toggle Game.html
@@ -714,7 +714,7 @@ It has been said that the best code diff is a red diff -- deleting code, feature
 
 But sometimes it&#39;s nervewracking to delete something that *may* still be needed. One way to handle this uncertainty is to flag the section that you are thinking of removing. This works like commenting it out, but you can also use it in a more nuanced way, for example turning a feature down gradually, or eliminating it from only certain segments of users.
 
-&lt;img src=&quot;https://github.com/wiredferret/Toggle/blob/master/img/red_diff.png&quot; width=&quot;500&quot; alt=&quot;Source control showing red and green diffs&quot;&gt;
+&lt;img src=&quot;https://github.com/wiredferret/Toggle/blob/master/img/red_diff.png?raw=true&quot; width=&quot;500&quot; alt=&quot;Source control showing red and green diffs&quot;&gt;
 
 [[Visibility]]
 [[Merging]] 
