Fixing the bandaid confusion

--- a/The Toggle Game.html
+++ b/The Toggle Game.html
@@ -554,7 +554,7 @@ This is gonna hurt, but only for a bit.
 Sometimes the best way to handle updating a code base in to dedicate time to it and all work together to make it happen. It stops your progress on anything else, but it can be very fast and efficient since the same tasks are repeated over and over. 
 
 The spaceline needs to change over the way they direct ships around, and all of the existing methods on established planets are outdated. For one astral month, they dedicate all their resources to replacing old signals instead of exploring and planting new ones. At the end of that time, the core systems are all updated.
-&lt;img src=&quot;https://wiredferret.github.io/Toggle/img/bandaid.jpeg&quot; width=&quot;500&quot; alt=&quot;An array of colorful banages&quot;&gt;
+&lt;img src=&quot;https://wiredferret.github.io/Toggle/img/bandaid.jpg&quot; width=&quot;300&quot; alt=&quot;An array of colorful banages&quot;&gt;
 
 [[Training is hard]]
 [[Works great]]</tw-passagedata><tw-passagedata pid="42" name="Training is hard" tags="Case-study" position="5001,867" size="100,100">#Training is hard
